--- a/app/src/main/res/layout/ring_screen.xml
+++ b/app/src/main/res/layout/ring_screen.xml
@@ -143,12 +143,11 @@
             android:layout_marginTop="12dp"
             android:layout_marginEnd="12dp"
             android:layout_marginBottom="12dp"
-            android:text="Set"
             android:paddingEnd="10dp"
-            android:textSize="16sp"
+            android:text="Set"
             android:textColor="@color/black_color"
-            android:textStyle="bold"
-            />
+            android:textSize="16sp"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:id="@+id/lringcontact"
@@ -167,7 +166,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Ringtone"
+                android:text="Contact Ringtone"
                 android:singleLine="true"
                 android:ellipsize="end"
                 android:maxLines="1"
