--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,24 +7,24 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.app.fartsounds.ui.fragments.HomeFragment"
+        android:name="com.funnyringtone.bestringtones.ui.fragments.HomeFragment"
         android:label="@string/app_name"
         tools:layout="@layout/fragment_home" />
 
     <fragment
         android:id="@+id/nav_lang"
-        android:name="com.app.fartsounds.ui.fragments.LanguageFragment"
+        android:name="com.funnyringtone.bestringtones.ui.fragments.LanguageFragment"
         android:label="@string/menu_lang"
         tools:layout="@layout/fragment_language" />
 
     <fragment
         android:id="@+id/nav_privacy"
-        android:name="com.app.fartsounds.ui.fragments.PrivacyFragment"
+        android:name="com.funnyringtone.bestringtones.ui.fragments.PrivacyFragment"
         android:label="@string/menu_privacy"
         tools:layout="@layout/fragment_privacy" />
     <activity
         android:id="@+id/mainActivity"
-        android:name="com.app.fartsounds.MainActivity"
+        android:name="com.funnyringtone.bestringtones.MainActivity"
         android:label="app_bar_main"
         tools:layout="@layout/app_bar_main" />
 
