--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,9 @@
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
+    <item name="_16sdp" type="dimen" >16dp</item>
+    <item name="_5sdp" type="dimen" >5dp</item>
+    <item name="_8sdp" type="dimen" >8dp</item>
+    <item name="_40sdp" type="dimen" >40dp</item>
+    <item name="_12sdp" type="dimen" >12dp</item>
 </resources>
